Fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ h1 {
 
 .term {
 	display: inline-block;
-	width: 30em;
+	width: 35em;
 	border: 1px solid #EEEEEE;
 	padding: 1em;
 	margin: 0.5em auto;
